Comp3095 - Week 3 Day 2 Commit

--- a/microservice-parent/product-service/src/main/resources/application.properties
+++ b/microservice-parent/product-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=product-service
+# tomcat port for product-service
+server.port=8080
+# mongodb database properties
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27018
+spring.data.mongodb.database=product-service
+spring.data.mongodb.username=9091
+spring.data.mongodb.password=Flashpoint2021!
+spring.data.mongodb.authentication-database=admin
+
+
